Added jackson dependency to return java objects as JSON, the list of players on the homepage now comes from the FOOSBALLUSER table in the database

--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>0.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.10</version>
+		</dependency>
 
 	</dependencies>
 
